# UI-simulator

./: .gitmodules  CMakeLists.txt  README.md
lvgl/: lv_conf.h
lvgl/demos/: README.md
src/: lv_porting.c  lv_porting.h  main.c
